--- a/app/views/employee_mailer/send_password_instructions_email.html.haml
+++ b/app/views/employee_mailer/send_password_instructions_email.html.haml
@@ -3,4 +3,4 @@
 %p Your Login credentials are:
 %p= "Email: #{@employee.email}"
 %p= "Password is password, you can update this in your account at any time."
-%p= "You can now start with your tasks as we discussed on call. Let me know if you have any confusions."
+%p= "You can now start with your tasks as we discussed on call. Let us know if you have any confusions."
