Added daily poll and email logic

--- a/app/views/employee_mailer/send_challenge_email.html.haml
+++ b/app/views/employee_mailer/send_challenge_email.html.haml
@@ -1,3 +1,3 @@
 %p= "Dear #{@employee.name}"
-%p= "Your Challenge Link is here #{@link}"
+%p= "Your Challenge Link is here #{ENV['HOST_URL']}#{@link}"
 %p= "You can now start with your challenge."
