Add bootstrap to the application.

--- a/app/views/employees/new.html.haml
+++ b/app/views/employees/new.html.haml
@@ -7,7 +7,7 @@
         %li= message
   = f.label :name
   %br
-  = f.text_field :name, autofocus: true
+  = f.text_field :name, autofocus: true, class: 'form-control'
   %br
   %br
   = f.label :designation
