Add bootstrap alerts, improved the UI a bit.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,10 @@
 @import "bootstrap/scss/bootstrap";
 
 body {
-  background: #EFEFEF;
+  background: #F4F1EC;
+}
+
+#alert-container {
+  margin-top: 10px;
+  float: right;
 }
