--- a/app/views/dashboard/_company.html.haml
+++ b/app/views/dashboard/_company.html.haml
@@ -3,3 +3,24 @@
     = render partial: 'dashboard/navigation'
   %div.container
     %h1 Dashboard
+    .row
+      .col-lg-10
+        All Employees
+      .col-lg-2
+        = link_to 'Add new employee', new_employee_path
+    %table.table
+      %thead
+        %tr
+          %th Name
+          %th Designation
+          %th Email
+          %th{ colspan: 3 } Actions
+      %tbody
+        - @employees.each do |employee|
+          %tr
+            %td= employee.name
+            %td= employee.designation
+            %td= employee.email
+            %td= link_to 'Delete', employee_path(employee), method: :delete, data: { confirm: 'Are you sure?' }
+
+
