--- a/app/views/dashboard/_navigation.html.erb
+++ b/app/views/dashboard/_navigation.html.erb
@@ -1,11 +1,13 @@
 <section>
   <div class="navigation">
-    <h1>Remote Fun</h1>
+    <h3 class="mt-2 ml-2 p-3">Remote Fun</h3>
     <ul>
-      <li><%= link_to 'Dashboard', root_path %></li>
-      <li><%= link_to 'Challenges & Poll', root_path %></li>
-      <li><%= link_to 'Winners', root_path %></li>
+      <li class="nav-link"><%= link_to 'Dashboard', root_path %></li>
+      <li class="nav-link"><%= link_to 'Challenges & Poll', root_path %></li>
+      <li class="nav-link"><%= link_to 'Winners', root_path %></li>
+      <li class="nav-link">
+        <%= link_to 'Logout', destroy_company_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </li>
     </ul>
-
   </div>
 </section>
