--- a/app/views/employees/index.html.haml
+++ b/app/views/employees/index.html.haml
@@ -1,5 +1,7 @@
-= link_to 'Add new employee', new_employee_path
-%table
+= link_to 'Add new employee', new_employee_path, class: 'btn btn-primary btn-sm mt-2'
+= link_to 'Dashboard', root_path, class: 'btn btn-primary btn-sm mt-2'
+%hr
+%table.table
   %thead
     %tr
       %th Name
