Change the styling for the company Dashboard text.

--- a/app/views/dashboard/_company.html.haml
+++ b/app/views/dashboard/_company.html.haml
@@ -2,7 +2,7 @@
   %div.navigation
     = render partial: 'dashboard/navigation'
   %div.container
-    %h1 Dashboard
+    %h3.mt-2.mb-5.pt-3 Dashboard
     .row
       .col-lg-10
         All Employees
