--- a/app/views/dashboard/_employee.html.haml
+++ b/app/views/dashboard/_employee.html.haml
@@ -1,2 +1,14 @@
-%h1 Employee Dashboard
-= link_to 'Logout', destroy_employee_session_path, method: :delete
+%div.dashboard
+  %div.navigation
+    = render partial: 'dashboard/navigation'
+  %div.container
+    %h3.mt-2.mb-5.pt-3 Dashboard
+    %p Today's Challenge
+    %p Name:
+    = @activity_for_today.dig(:selected_participants)&.first&.challenge&.name
+    %p Description:
+    =@activity_for_today.dig(:selected_participants)&.first&.challenge&.description
+    Today's participants
+    %ul
+      - @activity_for_today.dig(:selected_participants).each do |employee_challenge|
+        %li= employee_challenge.name
