Improved UI for video pages.

--- a/app/views/dashboard/_navigation.html.erb
+++ b/app/views/dashboard/_navigation.html.erb
@@ -3,8 +3,17 @@
     <h3 class="mt-2 ml-2 p-3">Remote Fun</h3>
     <ul>
       <li class="nav-link"><%= link_to 'Dashboard', root_path %></li>
+      <li class="nav-link"><%= link_to 'Challenges & Poll', activities_dashboard_index_path %></li>
+      <li class="nav-link"><%= link_to 'Winners', winners_dashboard_index_path %></li>
+      <% if employee_signed_in? %>
+        <li class="nav-link"><%= link_to 'My Videos', videos_path %></li>
+      <% end %>
       <li class="nav-link">
-        <%= link_to 'Logout', destroy_employee_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% if company_signed_in? %>
+          <%= link_to 'Logout', destroy_company_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% else %>
+          <%= link_to 'Logout', destroy_employee_session_path, method: :delete, data: { confirm: 'Are you sure?' } %>
+      <% end %>
       </li>
     </ul>
   </div>
