--- a/app/views/videos/_video.html.haml
+++ b/app/views/videos/_video.html.haml
@@ -2,4 +2,5 @@
   %td= video.title
   %td= video.description
   %td
-    %video{ autoplay: "", height: "100", loop: "", muted: "muted", src: url_for(video.file), width: "200" }
+    %video{ autoplay: "", height: "100", loop: "", muted: "muted",
+    src: url_for(video.file), width: "200", controls: true }
