--- a/app/views/videos/index.html.haml
+++ b/app/views/videos/index.html.haml
@@ -1,4 +1,7 @@
-%h2 All Videos
+= link_to 'Dashboard', videos_path, class: 'btn btn-primary btn-sm mt-2'
+= link_to 'Add new video', new_video_path, class: 'btn btn-primary btn-sm mt-2'
+%hr
+%h3.mt-2 All Videos
 %table.table
   %thead
     %tr
