--- a/app/views/challenges/attempt/show.html.erb
+++ b/app/views/challenges/attempt/show.html.erb
@@ -1,20 +1,22 @@
-<h5 class="mark mt-2">You can attempt this!</h5>
+<div class="container">
+  <h5 class="mark mt-2" style="color: green; text-align: center">You can attempt this!</h5>
 
-<h3>Challenge Name</h3>
-<%= @challenge.name %>
+  <h4 class="mt-4">Challenge Name</h4>
+  <p style="color: green;"><%= @challenge.name %></p>
 
-<h3>Challenge Description</h3>
-<%= @challenge.description %>
+  <h5 class="mt-4">Challenge Description</h5>
+  <p style="color: green;"><%= @challenge.description %></p>
 
-<h4>Record your video</h4>
-<button id="start" class="btn btn-primary btn-sm m-2">Start</button>
-<button id="stop" class="btn btn-primary btn-sm m-2">Stop and save</button>
+  <h4>Record your video</h4>
+  <button id="start" class="btn btn-success btn-sm m-2">Start</button>
+  <button id="stop" class="btn btn-secondary btn-sm m-2">Stop and save</button>
 
-<form id="record-video-container">
-  <%= hidden_field_tag 'video[title]', @challenge.name %>
-  <%= hidden_field_tag 'video[description]', @challenge.description %>
-  <%= hidden_field_tag 'video[employee_challenge_id]', @employee_challenge.id %>
-</form>
-<div>
-  <video style="border: 1px solid black" id="live" width="300" height="200" autoplay muted></video>
+  <form id="record-video-container">
+    <%= hidden_field_tag 'video[title]', @challenge.name %>
+    <%= hidden_field_tag 'video[description]', @challenge.description %>
+    <%= hidden_field_tag 'video[employee_challenge_id]', @employee_challenge.id %>
+  </form>
+  <div>
+    <video style="border: 1px solid black" id="live" width="300" height="200" autoplay muted></video>
+  </div>
 </div>
