--- a/app/views/dashboard/_employee.html.haml
+++ b/app/views/dashboard/_employee.html.haml
@@ -3,12 +3,16 @@
     = render partial: 'dashboard/navigation'
   %div.container
     %h3.mt-2.mb-5.pt-3 Dashboard
-    %p Today's Challenge
-    %p Name:
+    %h5 Today's Challenge
+    %hr
+    %b Name:
     = @activity_for_today.dig(:selected_participants)&.first&.challenge&.name
-    %p Description:
-    =@activity_for_today.dig(:selected_participants)&.first&.challenge&.description
-    Today's participants
-    %ul
+    %br
+    %b Description:
+    = @activity_for_today.dig(:selected_participants)&.first&.challenge&.description
+    %br
+    %hr
+    %b Today's participants
+    %ul.m-3
       - @activity_for_today.dig(:selected_participants).each do |employee_challenge|
         %li= employee_challenge.name
